XB-23: delete extra images and fix gaps

--- a/skillsharing/pages/Dialogs/ui/Dialogs.scss
+++ b/skillsharing/pages/Dialogs/ui/Dialogs.scss
@@ -4,7 +4,7 @@
     width: 100%;
     padding: 30px;
     align-items: stretch;
-    gap: 15px;
+    gap: 10px;
 
     &-page {
         display: flex;
