--- a/skillsharing/widgets/MainContent/MainContent.scss
+++ b/skillsharing/widgets/MainContent/MainContent.scss
@@ -11,7 +11,7 @@
         flex-grow: 1;
         overflow-y: scroll;
         max-height: calc(100vh - 220px);
-        gap: 15px;
+        gap: 10px;
 
         &::-webkit-scrollbar {
             display: none;
